--- a/Thesis.tex
+++ b/Thesis.tex
@@ -102,19 +102,19 @@ Use of streams of data for compositional and sound generating purposes is very f
 
 To give some real world examples, I would like to point out few significant works which use sonification as its main concept or method, and while doing so, I will try to exercise my proposal for the new sonification definition division.
 
-One of the most classic examples of sonification is \emph{Geiger} (or \emph{Geiger–Müller}) \emph{counter}, particle detector measuring ionizing radiation. Method of display of the information is use of pulses - representations of electrical charges (and consequential discharges) of the inert gas in the Geiger–Müller tube caused by particles or photons of radiation. Higher amount of electrical discharges (being higher amount of audio pulses coming from speakers) is signaling greater density of particles of radiation, thus higher radiation in the environment \cite{Knoll2010}. Geiger counter is clearly a \emph{analytic} sonification tool, with its main purpose being representation of certain information, rather than using the information as an artistic basis.
+One of the most classic examples of sonification is \emph{Geiger} (or \emph{Geiger–Müller}) \emph{counter}, particle detector measuring ionizing radiation. This tool is known for its direct connection between environmental value (in this case it is radiation) and sound, it is one of the most known sonification tools. Technically, method of auditory display of the information is use of pulses - representations of electrical charges (and consequential discharges) of the inert gas in the Geiger–Müller tube caused by particles or photons of the radiation. Higher amount of electrical discharges (being higher amount of audio pulses coming from speakers) is signaling greater density of particles of the radiation, thus higher radiation in the environment \cite{Knoll2010}. Geiger counter is clearly a \emph{analytic} sonification tool, with its main purpose being representation of certain information, rather than using the information as an artistic basis.
 
-I have chosen Geiger counter for another reason than simply being ideal representation of scientific and analytic attitude towards sonification. It is also a standalone and portable instrument. This opens up a possibility for its artistic use, even though its design is purely for research purposes. As I suggest later on in subsection discussing my wireless sonification project, I find interest in portable sonification tools for various environmental experiments.
+I have chosen Geiger counter for another reason than simply being ideal representation of scientific and analytic attitude towards sonification. It is also a standalone and portable instrument. This opens up a possibility for its artistic use, even though its design is serving purely for research purposes. As I suggest later on in subsection discussing my wireless sonification project, I find interest in portable sonification tools for various environmental experiments. These tools can be used as an immediate instruments, serving artists with unconventional musical experience of the data \emph{in situ}.  
 
 Geiger counter can be also viewed as representation of sub-method of sonification, \emph{audification}. \emph{``Audification is a technique of making sense of data by interpreting any kind of one-dimensional signal (or of a two-dimensional signal-like data set) as amplitude over time and playing it back on a loudspeaker for the purpose of listening.''}(Chapter 12, Sonification Handbook) 
 
-Audification is sonification simplified to most basic level. Most of the common real-time sonifications are than audifications as well, e.g.\ listening to the whale songs or bat echolocation, where the only transformations which happens between the data is change of playback speed.
+Audification is sonification simplified to the most basic level. Majority of the common real-time sonifications are than audifications as well, e.g.\ listening to the whale songs or bat echolocation, where the only transformations which happen on the data are changes of the playback speed.
 
-One of the most interesting sonification works is work of Christina Kubisch \cite{ChKubisch2012}. I have chosen her as an icon of electromagnetic induction a method, but there is a wider spectrum of artists using the same tools. Kubisch is German sound artist born in 1948. She studied classical instruments such as flute and piano, but have later turned to studying electronics at Technical Institute of Milan. Since than she has created various sound installations, usually combining electronics and delicate sounds. In a work I would like to mention - Electrical Walks, Kubisch is focusing on audification of electromagnetic fields with the use of induction coils, headphone amplifiers and headphones. This works as a nice example of artistic audification, where the purpose seems to be in finding of interesting sounds within the world of electromagnetic fields rather than scientific analysis. 
+One of the most interesting sonification works is work of Christina Kubisch \cite{ChKubisch2012}. I have chosen her as an icon of electromagnetic induction a method, even though there is a wider spectrum of artists using the same tools. She generally appears as the icon of the method, so it will not be different in my thesis. Kubisch is German sound artist born in 1948. She studied classical instruments such as flute and piano, but have later turned to studying electronics at Technical Institute of Milan. Since than she has created various sound installations, usually combining electronics and delicate sounds. In a work I would like to mention - Electrical Walks, Kubisch is focusing on audification of electromagnetic fields with the use of induction coils, headphone amplifiers and headphones. This works as a nice example of artistic audification, where the purpose seems to be in finding of interesting sounds within the world of electromagnetic fields rather than scientific analysis. 
 
-Induction coils are acting as antennas and natural amplifiers, filters, which when in right setting, can provide excellent tools for electromagnetic sensing. Alternating current (AC) oscillations of the electromagnetic field are inducted on the coil, thusly creating AC signal. This AC signal is than amplified and can be directly treated with any audio devices as sound. It is an oscillation, comparable to signal produced by oscillators.
+Induction coils are acting as antennas and natural amplifiers, which when in right setting, can provide excellent tools for electromagnetic sensing. Alternating current (AC) oscillations of the electromagnetic field are inducted on the coil, thusly creating AC signal. This AC signal is than amplified and can be directly treated with any audio devices as sound. It is an oscillation, similar to signal produced by oscillators.
 
-I have designed a simple pocket amplifier for this purposes called \textbf{Eletrosluch} (see fig.  ~\ref{fig:elektrosluch}). This device provides 100x gain for the coils and it is powerful enough to drive headphones. Its main benefit is the size and portability, ideal for an electromagnetic sonic explorations. The version 1.0 (on the ~\ref{fig:elektrosluch}) used tape head which I have extracted from old tape player as induction coil. Amplifying circuit was based around LM386 amplifier, which I have replaced in v1.1 with low-noise operational amplifier TL071. Tape heads have been replaced with \emph{pick-up coils}, which were in previous century, while attached with its suction cup to telephone headset, used for noise-less recordings of telephone calls. 
+I have designed a simple pocket amplifier for this purposes called \textbf{Eletrosluch} (see fig.  ~\ref{fig:elektrosluch}). This device provides 100x gain for the coils and it is powerful enough to drive headphones. Its main benefit is the size and portability, ideal for an electromagnetic sonic explorations. The version 1.0 (on the ~\ref{fig:elektrosluch}) used tape head which I have extracted from an old tape player as the induction coil. Amplifying circuit was based around LM386 amplifier, which I have replaced in v1.1 with low-noise operational amplifier TL071. Tape heads have been replaced with \emph{pick-up coils}, which were in previous century, while attached with its suction cup to telephone headset, used for noise-less recordings of telephone calls. 
 
 \begin{figure}  
   \centering
@@ -125,17 +125,17 @@ I have designed a simple pocket amplifier for this purposes called \textbf{Eletr
 
 Probably closest to my network sonificiation work is the one by Michael Chinen  and Shintaro Miyazaki's Institute for Algorhytmics. 
 
-Michael Takezo Chinen is an American programer. He studied computer science and composition at University of Washington, Tokyo Denki University and Dartmouth College with Richard Karpen, Charles Dodge and Naotoshi Osaka. He was part of the developers of popular open source audio editing software Audacity. His artistic focus resides in software sonification, in sense of method as in sense of target. Prove to this claim are his works \textbf{lstn} and \textbf{FuckingWebBrowser}, which I will now try to examine in greater detail. \cite{mchinen}
+Michael Takezo Chinen is an American programer. He studied computer science and composition at University of Washington, Tokyo Denki University and Dartmouth College with Richard Karpen, Charles Dodge and Naotoshi Osaka. He was part of the developers of popular open source audio editing software Audacity. His artistic focus resides in software sonification, in sense of a method as in sense of a target. Prove to this claim are his works \textbf{lstn} and \textbf{FuckingWebBrowser}, which I will now try to examine in greater detail. \cite{mchinen}
 
 Both \emph{lstn} and \emph{FuckingWebBrowser} are based around sonification of computer based streams and data. To be more precise, lstn is \emph{``a program that sonifies real-time debugging data of other programs''} and FuckingWebBrowser is \emph{``simple mac web browser with memory sonification based on WebKit''} \cite{Chinen2010, Chinen2010a}.
 
-These works are quite similar to my work Sonodump\footnote{More information about Sonodump can be found in 2.2 Wireless sonification}. For example, as well as Chinen in FuckingWebBrowser, I also deal with browsing of the internet as with the initial trigger and data stream for sound generation. One might find it as analogous action to e\.g.\, bowing of a violin. Address bar becomes a bow and stream of data (conscious decisions about URLs to type in the address bar) is the angle and pressure of the bow on the strings. 
+These works are quite similar to my work Sonodump\footnote{More information about Sonodump can be found in 2.2 Wireless sonification}. For example, as well as Chinen in FuckingWebBrowser, I also deal with browsing of the internet as with the initial trigger and data stream for the sound generation. One might find it as analogous action to e\.g.\, bowing of a violin. Address bar becomes a bow and stream of data (conscious decisions about URLs to type in the address bar) is the angle and pressure of the bow on the strings. 
 
-Chinen makes an excellent point for artistic stand towards sonification. Aim towards translating real information towards listener is missing (maybe only to a very experienced one); use of sonification plays a different, artistic, role, rather than the one of auditory display. This role being pure source of data for sound generation, not a source of information meant to be mediated towards audience.
+Chinen makes an excellent point for artistic stand towards sonification. Aim towards translating real information towards listener is missing (maybe only to a very experienced one); use of sonification plays a different, artistic, role, rather than the one of auditory display. It is about using a pure source of data for sound generation, not a source of information meant to be mediated towards audience.
 
-His work is representative and direct, yet its main point its not to convey information. Auditory display becomes `useless' from scientific or research point of view and becomes interesting as an artwork for its specific aesthetics.
+His work is representative and direct, yet its main point is not to convey information. Auditory display becomes `useless' from scientific or research point of view and becomes interesting as an artwork for its specific aesthetics.
 
-Chinen's work has been strongly connected to Institute for Algorhytmics, led by Shintaro Miyazaki. He is a post-doctoral researcher at Humboldt University in Berlin dealing with \emph{``epistemology, archeology, history and theory of everyday technologies, which store, transmit and process informations and their dynamic relation to sound, rhythms and other sorts of time-varying signals.''} \cite{Miyazaki2012}. From his projects, I want to point out his collaboration with Martin Howse\footnote{\url{http://www.1010.co.uk/}} called \textbf{Detektors}\footnote{\url{http://detektors.org}}.
+Chinen's work has been strongly connected to Institute for Algorhytmics, led by Shintaro Miyazaki. He is a post-doctoral researcher at Humboldt University in Berlin dealing with \emph{``epistemology, archeology, history and theory of everyday technologies, which store, transmit and process informations and their dynamic relation to sound, rhythms and other sorts of time-varying signals.''} \cite{Miyazaki2012}. From his projects, I want to point out his collaboration with Martin Howse \cite{howse} called \textbf{Detektors}.
 
 Detektors is \emph{``an open, collaborative project which uses sonic strategies and DIY-devices to make audible the hidden infoscapes of our time. The present website will show data, recordings and cartographies of different spectral ecologies and trans-sonic machinic agencements.''} \cite{detektors}. Website of the project contains many sound recordings of the electromagnetic fields (audifications) from radio-frequency range as well as cartographic information about such sources. It is a study of electromagnetic pollution, sonic behavior of digital devices in the context of geolocational sound recordings.
 
@@ -146,7 +146,7 @@ Detektors is \emph{``an open, collaborative project which uses sonic strategies 
 	\label{fig:detektor}
 \end{figure}
 
-For ``detection'', specially designed device is used as seen on figure ~\ref{fig:detektor}. Core of the hardware is handy logarithmic detector chip AD8313 produced by Analog Devices. This chip takes AC signals from up to 2.5 GHz  (upper border most used wireless network range is 2.4 Ghz \cite{802} and demodulates it into audible sphere. This is somehow similar to work of Kubisch, but there is a difference in the frequency spectrum target. Method using induction coils provides us only with electromagnetic AC signal within our hearing range and within the limitations of the amplifying system, but method using demodulator allows us to listen to e.g.\ bluetooth and wireless radio communication. Interestingly, Detektors and Kubisch's work both share emphasis on placing of their sonic discoveries within cartographic space.
+For ``detection'', specially designed device is used as seen on figure ~\ref{fig:detektor}. Core of the hardware is handy logarithmic detector chip AD8313 produced by Analog Devices. This chip takes AC signals from up to 2.5 GHz  (upper border most used wireless network range is 2.4 Ghz \cite{802} and demodulates it into audible sphere. This is somehow similar to work of Kubisch, but there is a difference in the frequency spectrum target. Method using induction coils provides us only with electromagnetic AC signal within our hearing range and within the limitations of the amplifying system, but method using demodulator allows us to listen to high frequency communication, such as bluetooth and wireless radio. Interestingly, Detektors and Kubisch's work both share emphasis on placing of their sonic discoveries within cartographic space.
 
 %Sonification of objects using distance sensors.
 Another case to study and analyze might be a project of Gil Weinberg called \emph{BrainWaves}. It is based on interactive auditory research of electrical stimuli applied to \emph{in vitro} neuron cultures. I picked the project for the collision of scientific and artistic approach in the work.
