--- a/general.bib
+++ b/general.bib
@@ -30,6 +30,17 @@
 	Year = {2013},
 	Bdsk-Url-1 = {http://michaelchinen.com}}
 
+@url{howse,
+	Author = {Howse, Martin},
+	Date-Added = {2013-05-01 10:12:23 +0000},
+	Date-Modified = {2013-05-01 10:34:20 +0000},
+	Lastchecked = {March 23, 2013},
+	Title = {{M}artin {H}owse},
+	Url = {http://www.1010.co.uk},
+	Urldate = {March 23, 2013},
+	Year = {2013},
+	Bdsk-Url-1 = {http://www.1010.co.uk}}
+
 @book{Hermann2011,
 	Address = {Berlin},
 	Annote = {LDR    01362cam  22003855a 4500
@@ -267,7 +278,9 @@
 @misc{detektors,
 	Title = {{Detektors}},
 	Urldate = {March 23, 2013},
-	Year = {2010}}
+	Year = {2010}
+	Url = http://detektors.org
+	}
 
 @comment{BibDesk Static Groups{
 <?xml version="1.0" encoding="UTF-8"?>
