--- a/Thesis.tex
+++ b/Thesis.tex
@@ -151,17 +151,15 @@ For ``detection'', specially designed device is used as seen on figure ~\ref{fig
 %Sonification of objects using distance sensors.
 Another case to study and analyze might be a project of Gil Weinberg called \emph{BrainWaves}. It is based on interactive auditory research of electrical stimuli applied to \emph{in vitro} neuron cultures. I picked the project for the collision of scientific and artistic approach in the work.
 
-To briefly describe the project, \emph{BrainWaves} is \emph{``sonification installation that allows a group of players to interact with an auditory display of neural activity. The system is designed to represent electrical spike propagation in a neuron culture through sound propagation in space. Participants can simulate neural spikes by using a set of specially designed controllers, experimenting and sonically investigating the electrical activity of the brain.''} \cite{Weinberg2006}
+To briefly describe the project, \emph{BrainWaves} is \emph{``sonification installation that allows a group of players to interact with an auditory display of neural activity. The system is designed to represent electrical spike propagation in a neuron culture through sound propagation in space. Participants can simulate neural spikes by using a set of specially designed controllers, experimenting and sonically investigating the electrical activity of the brain.''} \cite[p.~9]{Weinberg2006}. The particular part which caught my interest is desire to experiment with the subject of sonification interactively. Classic idea of stream of data is missing - instead of discrete information there is a system, which needs to be sonified. As a comparison, one can imagine hitting an oil barrel in a goal of exploring its acoustic properties - physical model, where system becomes the subject.
 
-The particular part which caught my interest is desire to experiment with the subject of sonification interactively. Classic idea of stream of data is missing - instead of discrete information there is a system, which needs to be sonified. As a comparison, one can imagine hitting an oil barrel in a goal of exploring its acoustic properties - physical model or a `system' of the subject.
-
-Since main subject of the auditory display is propagation pattern simulation, the authors have decided to use spatialization as key element of representation. As they argue against visual display, \emph{``sonification can be more effective than visualization in such a spatial application because the human auditory system is able to perceive synchronous spatial stimuli from every point within a space, while visual perception is limited to physical range of sight.''} For the purpose, 8 speakers in space are used to provide sufficient clues for the exact propagation pattern.
+Since main subject of the auditory display is propagation pattern simulation, the authors have decided to use spatialization as key element of representation. As they argue against visual display, \emph{``sonification can be more effective than visualization in such a spatial application because the human auditory system is able to perceive synchronous spatial stimuli from every point within a space, while visual perception is limited to physical range of sight.''} \cite[p.~9]{Weinberg2006}. For the purpose, 8 speakers in space are used to provide sufficient clues for the exact propagation pattern.
 
 For the interactive standpoint, custom made drum trigger instruments were created using piezo elements to represent electrical spikes in the system. Performers are asked to hit these in specific way - after first propagation ends, performer placed closest to its ending is bound to start another one, by hitting his own instrument. At this point one could see an interesting connection between \emph{sonification} and \emph{gamification} as very close methods of bringing data streams and system under closer, possibly more understandable examination.
 
 As authors conclude, the method of using almost only spatialization for auditory display purposes was not completely successful, since they noticed that part of performers was using visual representation of the process (provided during event) to orient in the process rather than simply listen to the positioning. 
 
-From the analysis stand point, I see this work as bordering between scientific and artistic approach. The effort to analyze real scientific system combined with use of almost musical methods and instruments seems as interesting way of reaching sonologicaly relevant results. It seems that authors have not seen scientific results as the pure purpose of the work - using (musical) instruments, focus on aesthetics of the sound themselves both suggest this was not classical scientific approach.
+From the analysis stand point, I see this work as bordering between scientific and artistic approach. The effort to analyze real scientific system combined with use of almost musical methods and instruments seems as interesting way of reaching sonologicaly relevant results. It seems that authors have not seen scientific results as a pure purpose of the work - using (musical) instruments, focus on aesthetics of the sound themselves both suggest this was not classical scientific approach.
 
 \section{Wireless network sonification}
 
