--- a/Thesis.tex
+++ b/Thesis.tex
@@ -161,6 +161,8 @@ As authors conclude, the method of using almost only spatialization for auditory
 
 From the analysis stand point, I see this work as bordering between scientific and artistic approach. The effort to analyze real scientific system combined with use of almost musical methods and instruments seems as interesting way of reaching sonologicaly relevant results. It seems that authors have not seen scientific results as a pure purpose of the work - using (musical) instruments, focus on aesthetics of the sound themselves both suggest this was not classical scientific approach.
 
+Hopefully, at this point I have presented sufficient amount of various works which allow me to prove my point in making distinction in methods or approaches in sonification. I personally believe, that it is important to recognize artistic sonification as specific subject, since I have not found this disambiguation to be done sufficiently.
+
 \section{Wireless network sonification}
 
 As a part of my experimentation with untraditional sources for musical or generally sonic data I decided to extend my line of work on the layer of wireless networks. Project I would like to describe in this chapter is dealing with wireless network sonification as a main artistic source for sonic performance and installation. In basic terms, it catches data streams `from the air' and transforms them directly into sound using set of tools and methods. This work has been presented as a performance and an installation. In case of performance, I have used live coding technique to change the aspects of the sonification and I performed by interacting with (tampering) the data stream itself, generating artificial traffic on the network.
