--- a/Thesis.tex
+++ b/Thesis.tex
@@ -106,7 +106,7 @@ One of the most classic examples of sonification is \emph{Geiger} (or \emph{Geig
 
 I have chosen Geiger counter for another reason than simply being ideal representation of scientific and analytic attitude towards sonification. It is also a standalone and portable instrument. This opens up a possibility for its artistic use, even though its design is serving purely for research purposes. As I suggest later on in subsection discussing my wireless sonification project, I find interest in portable sonification tools for various environmental experiments. These tools can be used as an immediate instruments, serving artists with unconventional musical experience of the data \emph{in situ}.  
 
-Geiger counter can be also viewed as representation of sub-method of sonification, \emph{audification}. \emph{``Audification is a technique of making sense of data by interpreting any kind of one-dimensional signal (or of a two-dimensional signal-like data set) as amplitude over time and playing it back on a loudspeaker for the purpose of listening.''}(Chapter 12, Sonification Handbook) 
+Geiger counter can be also viewed as representation of sub-method of sonification, \emph{audification}. To quote Sonification Handbook,  \emph{``audification is a technique of making sense of data by interpreting any kind of one-dimensional signal (or of a two-dimensional signal-like data set) as amplitude over time and playing it back on a loudspeaker for the purpose of listening.''} \cite[p.~301]{audif}
 
 Audification is sonification simplified to the most basic level. Majority of the common real-time sonifications are than audifications as well, e.g.\ listening to the whale songs or bat echolocation, where the only transformations which happen on the data are changes of the playback speed.
 
