--- a/general.bib
+++ b/general.bib
@@ -8,7 +8,6 @@
 %% Saved with string encoding Unicode (UTF-8) 
 
 
-
 @url{ChKubisch2012,
 	Author = {Orens, Geoff},
 	Date-Added = {2013-05-01 10:44:45 +0000},
@@ -84,6 +83,15 @@
 	Publisher = {Logos Verlag},
 	Title = {The sonification handbook},
 	Year = {2011}}
+
+@inproceedings{audif,
+	author = {Florian Dombois and Gerhard Eckel},
+	title = {Audification},
+	booktitle = {Sonification Handbook},
+	publisher = {Logos Verlag}, 
+	pages = {301--324},
+	year = {2011}}
+
 
 @misc{Fitch,
 	Author = {Kramer, Gregory and Walker, Bruce and Bonebright, Terri and Cook, Perry and Flowers, John and Miner, Nadine and Neuhoff, John},
@@ -278,8 +286,8 @@
 @misc{detektors,
 	Title = {{Detektors}},
 	Urldate = {March 23, 2013},
-	Year = {2010}
-	Url = http://detektors.org
+	Year = {2010},
+	Url = {http://detektors.org}
 	}
 
 @comment{BibDesk Static Groups{
